# remembrallmcp

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  glama.json  install.sh  package-lock.json  package.json  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
benchmarks/reports/: benchmark-2026-04-02.md
crates/engram-core/: Cargo.toml
crates/engram-core/src/: config.rs  embed.rs  error.rs  graph.rs  indexer.rs  ingest.rs  lib.rs  memory.rs  search.rs
crates/engram-core/src/graph/: store.rs  types.rs
crates/engram-core/src/memory/: store.rs  types.rs
crates/engram-core/src/parser/: go.rs  java.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs  walker.rs
crates/engram-integration-tests/src/: main.rs
crates/engram-python/: Cargo.toml
crates/engram-python/src/: lib.rs
crates/engram-recall-test/: Cargo.toml
crates/engram-recall-test/src/: ground_truth.rs  main.rs  report.rs  runner.rs  scorer.rs  seed.rs
crates/engram-server/: Cargo.toml
crates/engram-server/src/: config.rs  lib.rs  main.rs  watcher.rs
crates/engram-test-harness/: Cargo.toml
crates/engram-test-harness/src/: comparator.rs  ground_truth.rs  main.rs  scorer.rs
crates/remembrall-core/: Cargo.toml  README.md
crates/remembrall-core/src/graph/: store.rs  types.rs
crates/remembrall-core/src/memory/: store.rs
crates/remembrall-core/src/parser/: go.rs  java.rs  kotlin.rs  python.rs  ruby.rs  rust.rs  typescript.rs  walker.rs
crates/remembrall-integration-tests/src/: main.rs
crates/remembrall-recall-test/src/: runner.rs
crates/remembrall-server/: Cargo.toml  README.md
crates/remembrall-server/src/: lib.rs
crates/remembrall-server/src/tools/: graph.rs  memory.rs
crates/remembrall-test-harness/src/: comparator.rs
docs/: benchmark-roadmap.md  field-level-references.md  parser-architecture.md  test-plan.md
scripts/: awesome-list-prs.md  community-posts.md  outreach-emails.md  show-hn-comment.txt  smoke-test-docker.sh  submit-directories.mjs
test-fixtures/: .gitignore  field-capture.toml
test-fixtures/field-capture/src/: account.rs  invoice.py  server.go
tests/recall/: ground_truth.toml  seed_memories.toml
