[workspace]
members = ["crates/engram-core", "crates/engram-server", "crates/engram-test-harness", "crates/engram-recall-test"]
# "crates/engram-python" - deferred until PyO3 supports Python 3.14
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
pgvector = { version = "0.4", features = ["sqlx"] }
walkdir = "2"
regex = "1"
