[workspace]
members = ["crates/engram-core", "crates/engram-server", "crates/engram-test-harness", "crates/engram-recall-test", "crates/engram-integration-tests"]
# "crates/engram-python" - deferred until PyO3 supports Python 3.14
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "=1.50.0", features = ["full"] }
sqlx = { version = "=0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
uuid = { version = "=1.22.0", features = ["v4", "v5", "serde"] }
chrono = { version = "=0.4.44", features = ["serde"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
thiserror = "=2.0.18"
anyhow = "=1.0.102"
pgvector = { version = "=0.4.1", features = ["sqlx"] }
walkdir = "=2.5.0"
regex = "=1.12.3"
