[package]
name = "engram-python"
version.workspace = true
edition.workspace = true

[lib]
name = "engram"
crate-type = ["cdylib"]

[dependencies]
engram-core = { path = "../engram-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
