[package]
name = "remembrall-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent knowledge memory and code dependency graph for AI agents"
repository = "https://github.com/cdnsteve/remembrallmcp"

[[bin]]
name = "spike"
path = "src/bin/spike.rs"

[[bin]]
name = "spike2"
path = "src/bin/spike2.rs"

[[bin]]
name = "parser_smoke"
path = "src/bin/parser_smoke.rs"

[[bin]]
name = "spike3"
path = "src/bin/spike3.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pgvector = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
fastembed = "5"
[[bin]]
name = "kt_ast_debug"
path = "src/bin/kt_ast_debug.rs"

[[bin]]
name = "bench_index"
path = "src/bin/bench_index.rs"
