[package]
name = "remembrall-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for RemembrallMCP - persistent memory and code intelligence for AI agents"
repository = "https://github.com/roboticforce/remembrallmcp"
readme = "README.md"

[[bin]]
name = "remembrall"
path = "src/main.rs"

[dependencies]
remembrall-core = { version = "=0.3.1", path = "../remembrall-core" }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = "6"
toml = "0.8"
notify = "8"
notify-debouncer-full = "0.5"
chrono = { workspace = true }
